force-app/main/default/objects/Loading_Advice_Line__c/Loading_Advice_Line__c.object-meta.xml
<CustomObject>
    <label>Loading Advice Line</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Loading Advice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loading Advice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>