force-app/main/default/objects/Loading_Advice_Line__c/fields/ActualQuantity_DKL__c.field-meta.xml
<CustomField>
    <fullName>ActualQuantity_DKL__c</fullName>
    <formula>BLANKVALUE(DeliveredQuantity_DKL__c, QuantityMT_DKL__c)</formula>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>