force-app/main/default/objects/Loading_Advice_Line__c/fields/CreditPeriod_DKL__c.field-meta.xml
<CustomField>
    <fullName>CreditPeriod_DKL__c</fullName>
    <formula>Customer_DKL__r.CreditPeriod_DKL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Period</label>
    <type>Text</type>
</CustomField>