force-app/main/default/objects/Loading_Advice_Line__c/fields/Customer_DKL__c.field-meta.xml
<CustomField>
    <fullName>Customer_DKL__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loading Advice Lines</relationshipLabel>
    <relationshipName>Loading_Advice_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>