force-app/main/default/objects/Loading_Advice_Line__c/fields/CustomerCal_DKL__c.field-meta.xml
<CustomField>
    <fullName>CustomerCal_DKL__c</fullName>
    <formula>Customer_DKL__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Cal</label>
    <type>Text</type>
</CustomField>