force-app/main/default/objects/Loading_Advice_Line__c/fields/CustomerType_DKL__c.field-meta.xml
<CustomField>
    <fullName>CustomerType_DKL__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>