force-app/main/default/objects/Loading_Advice_Line__c/fields/DeliveredAmount_DKL__c.field-meta.xml
<CustomField>
    <fullName>DeliveredAmount_DKL__c</fullName>
    <label>Delivered Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>