force-app/main/default/objects/Loading_Advice_Line__c/fields/DeliveryMode_DKL__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMode_DKL__c</fullName>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gradient Delivery</fullName>
            </value>
            <value>
                <fullName>Self Collection</fullName>
            </value>
            <value>
                <fullName>3rd Party Transport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>