force-app/main/default/objects/Loading_Advice_Line__c/fields/GrandTotal_DKL__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal_DKL__c</fullName>
    <formula>BLANKVALUE(ProductTotal_DKL__c, 0) + 
BLANKVALUE(HeatingPerTruck_DKL__c, 0) + 
(BLANKVALUE(SprayerRate_DKL__c, 0) * BLANKVALUE(NumberofSprayerDays_DKL__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>