force-app/main/default/objects/Loading_Advice_Line__c/fields/HeatingPerTruck_DKL__c.field-meta.xml
<CustomField>
    <fullName>HeatingPerTruck_DKL__c</fullName>
    <label>Heating Charge (N/Truck)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>