force-app/main/default/objects/Loading_Advice_Line__c/fields/LoadingAdvice_DKL__c.field-meta.xml
<CustomField>
    <fullName>LoadingAdvice_DKL__c</fullName>
    <label>Loading Advice</label>
    <referenceTo>Loading_Advice__c</referenceTo>
    <relationshipLabel>Loading Advice Lines</relationshipLabel>
    <relationshipName>Loading_Advice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>