force-app/main/default/objects/Loading_Advice_Line__c/fields/Location_DKL__c.field-meta.xml
<CustomField>
    <fullName>Location_DKL__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>