force-app/main/default/objects/Loading_Advice_Line__c/fields/LPO_Number__c.field-meta.xml
<CustomField>
    <fullName>LPO_Number__c</fullName>
    <label>LPO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>