force-app/main/default/objects/Loading_Advice_Line__c/fields/NumberofSprayerDays_DKL__c.field-meta.xml
<CustomField>
    <fullName>NumberofSprayerDays_DKL__c</fullName>
    <label>Number of Sprayer Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>