force-app/main/default/objects/Loading_Advice_Line__c/fields/OrderProduct_DKL__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Loading Advice Lines</relationshipLabel>
    <relationshipName>Loading_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>