force-app/main/default/objects/Loading_Advice_Line__c/fields/PaymentStatusText_DKL__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatusText_DKL__c</fullName>
    <label>Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>