force-app/main/default/objects/Loading_Advice_Line__c/fields/PaymentTerm_DKL__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm_DKL__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Free Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>