force-app/main/default/objects/Loading_Advice_Line__c/fields/PlantLocation_DKL__c.field-meta.xml
<CustomField>
    <fullName>PlantLocation_DKL__c</fullName>
    <label>Plant Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kaduna</fullName>
            </value>
            <value>
                <fullName>Warri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>