force-app/main/default/objects/Loading_Advice_Line__c/fields/PricePerMT_DKL__c.field-meta.xml
<CustomField>
    <fullName>PricePerMT_DKL__c</fullName>
    <label>Price (N/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>