force-app/main/default/objects/Loading_Advice_Line__c/fields/Product_DKL__c.field-meta.xml
<CustomField>
    <fullName>Product_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Loading Advice Lines</relationshipLabel>
    <relationshipName>Loading_Advice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>