force-app/main/default/objects/Loading_Advice_Line__c/fields/ProductCalc_DKL__c.field-meta.xml
<CustomField>
    <fullName>ProductCalc_DKL__c</fullName>
    <formula>Product_DKL__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Calc</label>
    <type>Text</type>
</CustomField>