force-app/main/default/objects/Loading_Advice_Line__c/fields/ProductSubtotal_DKL__c.field-meta.xml
<CustomField>
    <fullName>ProductSubtotal_DKL__c</fullName>
    <formula>PricePerMT_DKL__c  +  TransportationPerMT_DKL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>