force-app/main/default/objects/Loading_Advice_Line__c/fields/ProductTotal_DKL__c.field-meta.xml
<CustomField>
    <fullName>ProductTotal_DKL__c</fullName>
    <formula>(BLANKVALUE(PricePerMT_DKL__c, 0) + BLANKVALUE(TransportationPerMT_DKL__c, 0)) * BLANKVALUE(DeliveredQuantity_DKL__c, QuantityMT_DKL__c)</formula>
    <label>Product Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>