force-app/main/default/objects/Loading_Advice_Line__c/fields/QuantityMT_DKL__c.field-meta.xml
<CustomField>
    <fullName>QuantityMT_DKL__c</fullName>
    <label>Quantity (MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>