force-app/main/default/objects/Loading_Advice_Line__c/fields/SignedActualAmount_DKL__c.field-meta.xml
<CustomField>
    <fullName>SignedActualAmount_DKL__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(LoadingAdvice_DKL__r.Status_DKL__c, &quot;Active&quot;),
        ISPICKVAL(LoadingAdvice_DKL__r.Approval_Status_DKL__c, &quot;Approved&quot;)
    ),
    GrandTotal_DKL__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>