force-app/main/default/objects/Loading_Advice_Line__c/fields/SignedActualQuantity_DKL__c.field-meta.xml
<CustomField>
    <fullName>SignedActualQuantity_DKL__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(LoadingAdvice_DKL__r.Status_DKL__c, &quot;Active&quot;),
        ISPICKVAL(LoadingAdvice_DKL__r.Approval_Status_DKL__c, &quot;Approved&quot;)
    ),
      QuantityMT_DKL__c  ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed Actual Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>