force-app/main/default/objects/Loading_Advice_Line__c/fields/Site_DKL__c.field-meta.xml
<CustomField>
    <fullName>Site_DKL__c</fullName>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>