force-app/main/default/objects/Loading_Advice_Line__c/fields/SprayerRate_DKL__c.field-meta.xml
<CustomField>
    <fullName>SprayerRate_DKL__c</fullName>
    <label>Sprayer Rate (N/MT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>