force-app/main/default/objects/Loading_Advice_Line__c/fields/State_DKL__c.field-meta.xml
<CustomField>
    <fullName>State_DKL__c</fullName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>