force-app/main/default/objects/Loading_Advice_Line__c/fields/TransportationPerMT_DKL__c.field-meta.xml
<CustomField>
    <fullName>TransportationPerMT_DKL__c</fullName>
    <label>Transportation (N/MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>